--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-12  Bruno Haible  <bruno@clisp.org>
+
+	* nl.po: Update from Benno Schulenberg <benno@vertaalt.nl>.
+
 2007-10-07  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in.in ($(DOMAIN).pot-update): Exclude "GNU <package>"
