--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-13  Bruno Haible  <bruno@clisp.org>
+
+	* po/nl.po: Update from Benno Schulenberg <benno@vertaalt.nl>.
+
 2007-09-15  Bruno Haible  <bruno@clisp.org>
 
 	* po/vi.po: Update from Clytie Siddall <clytie@riverland.net.au>.
