--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,8 @@
 2007-10-14  Bruno Haible  <bruno@clisp.org>
 
+	* po-mode.el (po-any-msgstr-block-regexp): Renamed from
+	po-any-msgstr-regexp.
+
 	* po-mode.el (po-any-msgstr-form-regexp): Renamed from
 	po-any-msgstr-regexp-old.
 
