--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,8 @@
 2007-10-14  Bruno Haible  <bruno@clisp.org>
 
+	* po-mode.el (po-start-of-msgstr-form, po-end-of-msgstr-form): New
+	defvars.
+
 	* po-mode.el (po-start-of-msgstr-form): Renamed from
 	po-start-of-this-msgstr.
 	(po-end-of-msgstr-form): Renamed from po-end-of-this-msgstr.
