--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-15  Bruno Haible  <bruno@clisp.org>
+
+	* po-mode.el (po-edit-string): Renamed from po-edit-string-new. Remove
+	old po-edit-string function.
+
 2007-10-14  Bruno Haible  <bruno@clisp.org>
 
 	* po-mode.el (po-find-span-of-entry): Inline po-find-this-msgstr.
