--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,7 @@
 2007-10-15  Bruno Haible  <bruno@clisp.org>
 
+	* po-mode.el (po-edit-msgstr-old): Remove function.
+
 	* po-mode.el (po-edit-string): Renamed from po-edit-string-new. Remove
 	old po-edit-string function.
 
