--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,7 @@
 2007-10-15  Bruno Haible  <bruno@clisp.org>
 
+	* po-mode.el (po-subedit-exit-old): Remove function.
+
 	* po-mode.el (po-set-msgstr-form): Renamed from po-set-msgstr-new.
 	(po-set-msgstr): Remove function.
 
