--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,7 @@
 2007-10-15  Bruno Haible  <bruno@clisp.org>
 
+	* po-mode.el (po-get-msgid): Remove 'kill' argument.
+
 	* po-mode.el (po-get-msgstr-form): Renamed from po-get-msgstr-new.
 	(po-get-msgstr): Remove function.
 
