--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-17  Bruno Haible  <bruno@clisp.org>
+
+	* hello-java/po/Makefile.am (stamp-po): Test $(PROPERTIESFILES), not
+	$(GMOFILES).
+
 2007-10-13  Bruno Haible  <bruno@clisp.org>
 
 	* po/nl.po: Update from Benno Schulenberg <benno@vertaalt.nl>.
