--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-17  Bruno Haible  <bruno@clisp.org>
+
+	* README.woe32: Recommend to set PATH. Needed so that libiconv-2.dll
+	is found during autoconfiguration.
+
 2007-10-07  Bruno Haible  <bruno@clisp.org>
 
 	* COPYING: Replace with GPL 3.
