--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-17  Bruno Haible  <bruno@clisp.org>
+
+	* woe32dll/gettextlib-exports.c: Export gl_array_list_implementation,
+	gl_linkedhash_list_implementation.
+
 2007-10-01  Bruno Haible  <bruno@clisp.org>
 
 	* gnulib-tests: New directory.
