Don't pass --package-name option to xgettext older than 0.16.2.

--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-18  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in.in ($(DOMAIN).pot-update): Don't pass the package name
+	and version to xgettext if the xgettext version is < 0.16.2.
+
 2007-10-12  Bruno Haible  <bruno@clisp.org>
 
 	* nl.po: Update from Benno Schulenberg <benno@vertaalt.nl>.
