--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-18  Bruno Haible  <bruno@clisp.org>
+
+	* hello-*/po/Makefile.am ($(DOMAIN).pot-update): Don't pass the package
+	name and version to xgettext if the xgettext version is < 0.16.2.
+
 2007-10-17  Bruno Haible  <bruno@clisp.org>
 
 	* hello-*/po/Makefile.am ($(DOMAIN).pot-update): Pass the package name
