--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,11 @@
 2007-10-20  Bruno Haible  <bruno@clisp.org>
 
+	* msgl-check.c (check_plural): If there is no header entry, or if the
+	header entry does not contain plural= and nplurals=, return a plural
+	distribution corresponding to the Germanic plural.
+
+2007-10-20  Bruno Haible  <bruno@clisp.org>
+
 	* format.h (check_msgid_msgstr_format): Add plural_distribution_length
 	argument.
 	* format.c (check_msgid_msgstr_format): Likewise.
