--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,11 @@
 2007-10-20  Bruno Haible  <bruno@clisp.org>
 
+	* msgmerge.c (message_merge): Set the fuzzy flag if the msgid_plural
+	changed.
+	Suggested by Chusslove Illich (Часлав Илић) <caslav.ilic@gmx.net>.
+
+2007-10-20  Bruno Haible  <bruno@clisp.org>
+
 	Make msgmerge's introduction of fuzzy markers more consistent with
 	msgfmt's --check-format.
 	* format.h (check_msgid_msgstr_format_i): New declaration.
