--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-20  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (Java): Mention the hello-java-qtjambi example.
+
 2007-10-05  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi: Enforce normal indentation of the first paragraph of each
