--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-20  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in (libintl.res): Put more literal newlines into the sed
+	scripts.
+
 2007-10-14  Bruno Haible  <bruno@clisp.org>
 
 	* dcigettext.c (DCIGETTEXT): Save errno also around the tfind() call.
