--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-21  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.h.in (LIBGETTEXTPO_VERSION): Bump version number.
+	(po_format_list, po_format_pretty_name): New declarations.
+	* gettext-po.c: Include xvasprintf.h.
+	(po_format_list, po_format_pretty_name): New functions.
+	Reported by Dwayne Bailey <dwayne@translate.org.za>.
+
 2007-10-20  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-po.c (po_message_check_format): Update call to check_message,
