--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-21  Bruno Haible  <bruno@clisp.org>
+
+	* dcigettext.c (_nl_find_msg): Use plain ANSI C.
+
 2007-10-20  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in (libintl.res): Put more literal newlines into the sed
