--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-21  Bruno Haible  <bruno@clisp.org>
 
+	* printf-parse.c: Don't assume <stdint.h> exists in IN_LIBASPRINTF
+	context.
+
+2007-10-21  Bruno Haible  <bruno@clisp.org>
+
 	* dcigettext.c (_nl_find_msg): Use plain ANSI C.
 
 2007-10-20  Bruno Haible  <bruno@clisp.org>
