Allow the IRIX 6.5 result (even though it does not support underlining).

--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,6 +1,7 @@
 2007-10-21  Bruno Haible  <bruno@clisp.org>
 
 	* tests/test-term-ostream-xterm-osf51.out: New file.
+	* tests/test-term-ostream-xterm-irix65.out: New file.
 	* tests/test-term-ostream-xterm-mingw.out: New file.
 	* tests/test-term-ostream-xterm: Use them as possible test results.
 	* Makefile.am (EXTRA_DIST): Add the new files.
