--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,15 @@
+2007-10-21  Bruno Haible  <bruno@clisp.org>
+
+	Normalize the leading space of every comment line during input, not
+	during output.
+	* read-catalog-abstract.c (po_callback_comment_dispatcher): Before
+	calling po_callback_comment or po_callback_comment_dot, drop the
+	leading space.
+	* write-po.c (message_print_comment, message_print_comment_dot): Don't
+	remove the leading space of every comment line.
+	* write-stringtable.c (write_message): Likewise.
+	Suggested by Dwayne Bailey <dwayne@translate.org.za>.
+
 2007-10-20  Bruno Haible  <bruno@clisp.org>
 
 	* msgmerge.c (message_merge): Set the fuzzy flag if the msgid_plural
