--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,18 @@
+2007-10-22  Bruno Haible  <bruno@clisp.org>
+
+	* ulonglong.m4 (AC_TYPE_UNSIGNED_LONG_LONG_INT): Use -1ull, not
+	-1u, in preprocessor expression, so that we don't test for the bug
+	in HP-UX 11.00 cpp.  Testing for this bug caused problems; see
+	<http://lists.gnu.org/archive/html/bug-gnulib/2007-10/msg00329.html>.
+
+2007-10-16  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Check for 64-bit int errors in HP-UX 10.20 preprocessor.
+	Problem reported by H.Merijn Brand in
+	<http://lists.gnu.org/archive/html/bug-tar/2007-10/msg00018.html>.
+	* longlong.m4 (AC_TYPE_LONG_LONG_INT): Check preprocessor too.
+	* ulonglong.m4 (AC_TYPE_UNSIGNED_LONG_LONG_INT): Likewise.
+
 2007-10-07  Bruno Haible  <bruno@clisp.org>
 
 	* intl.m4 (AM_INTL_SUBDIR): Set WOE32DLL on mingw like on Cygwin.
