--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-25  Bruno Haible  <bruno@clisp.org>
+
+	* restrict.m4: Remove file.
+	* Makefile.am (EXTRA_DIST): Remove it.
+
 2007-10-17  Bruno Haible  <bruno@clisp.org>
 
 	* locale-ja.m4 (gt_LOCALE_JA): On Cygwin, don't allow locale names
