--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,6 +1,7 @@
 2007-10-25  Bruno Haible  <bruno@clisp.org>
 
 	* tests/test-term-ostream-xterm: Redirect stderr into a pipe.
+	* tests/test-term-ostream-xterm-aix51.out: Remove padding.
 
 2007-10-21  Bruno Haible  <bruno@clisp.org>
 
