--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-26  Bruno Haible  <bruno@clisp.org>
+
+	* modules/libxml (Depends-on): Add snprintf, vsnprintf. Needed for
+	OSF/1 4.0.
+
 2007-10-25  Bruno Haible  <bruno@clisp.org>
 
 	* tests/test-term-ostream-xterm: Redirect stderr into a pipe.
