--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-26  Bruno Haible  <bruno@clisp.org>
+
+	* m4/libtool.m4: Update, based on libtool-1.5.24.
+	* build-aux/ltmain.sh: Update, based on libtool-1.5.24.
+
 2007-10-17  Bruno Haible  <bruno@clisp.org>
 
 	* windows/windres-options (sed_extract_major, sed_extract_minor,
