--- a/gettext-runtime/po/nl.po
+++ b/gettext-runtime/po/nl.po
@@ -1,4 +1,4 @@
-# Translation of gettext-runtime-0.16 to Dutch.
+# Translation of gettext-runtime-0.16.2-pre5 to Dutch.
 # Copyright (C) 2004, 2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gettext-runtime package.
 #
@@ -6,17 +6,16 @@
 # Benno Schulenberg <benno@vertaalt.nl>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-runtime-0.16\n"
+"Project-Id-Version: gettext-runtime-0.16.2-pre5\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2007-10-07 23:09+0200\n"
-"PO-Revision-Date: 2007-10-12 00:30+0200\n"
+"POT-Creation-Date: 2007-10-18 02:56+0200\n"
+"PO-Revision-Date: 2007-10-16 18:51+0200\n"
 "Last-Translator: Benno Schulenberg <benno@vertaalt.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: gnulib-lib/closeout.c:66
 msgid "write error"
@@ -96,6 +95,11 @@ msgid ""
 "This is free software: you are free to change and redistribute it.\n"
 "There is NO WARRANTY, to the extent permitted by law.\n"
 msgstr ""
+"Copyright (C) %s Free Software Foundation, Inc.\n"
+"Dit is vrije software: u mag het vrijelijk wijzigen en verder verspreiden.\n"
+"De precieze licentie is GPLv3+: GNU GPL versie 3 of later;\n"
+"zie http://gnu.org/licenses/gpl.html voor de volledige tekst.\n"
+"Er is GEEN GARANTIE, voor zover de wet dit toestaat.\n"
 
 #: src/envsubst.c:118 src/gettext.c:139 src/ngettext.c:129
 #, c-format
@@ -234,11 +238,11 @@ msgid ""
 "  [TEXTDOMAIN] MSGID        retrieve translated message corresponding\n"
 "                            to MSGID from TEXTDOMAIN\n"
 msgstr ""
-"  -d, --domain=TEKSTDOMEIN  vertaalde berichten in TEKSTDOMEIN opzoeken\n"
+"  -d, --domain=TEKSTDOMEIN  vertalingen opzoeken in TEKSTDOMEIN\n"
 "  -e                        sommige stuurcodereeksen interpreteren\n"
 "  -E                        (genegeerd, maar herkend wegens compatibiliteit)\n"
 "  -h, --help                deze hulptekst tonen en stoppen\n"
-"  -n                        witregel aan einde onderdrukken\n"
+"  -n                        afsluitend regeleindeteken onderdrukken\n"
 "  -V, --version             versie-informatie tonen en stoppen\n"
 "  [TEKSTDOMEIN] MSGID       vertaling van MSGID opzoeken (in TEKSTDOMEIN)\n"
 
@@ -290,14 +294,14 @@ msgid ""
 "  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL (plural)\n"
 "  COUNT                     choose singular/plural form based on this value\n"
 msgstr ""
-"  -d, --domain=TEKSTDOMEIN  vertaalde bericht opzoeken in TEKSTDOMEIN\n"
-"  -e                        uitschrijven van bepaalde escape-reeksen aanzetten\n"
-"  -E                        (genegeerd voor compatibiliteit)\n"
+"  -d, --domain=TEKSTDOMEIN  vertalingen opzoeken in TEKSTDOMEIN\n"
+"  -e                        sommige stuurcodereeksen interpreteren\n"
+"  -E                        (genegeerd, maar herkend wegens compatibiliteit)\n"
 "  -h, --help                deze hulptekst tonen en stoppen\n"
 "  -V, --version             versie-informatie tonen en stoppen\n"
 "  [TEKSTDOMEIN]             vertaalde bericht opzoeken in TEKSTDOMEIN\n"
-"  MSGID MSGID-MEERVOUD      MSGID (enkelvoud) / MSGID-MEERVOUD (meervoud) vertalen\n"
-"  AANTAL                    enkel- of meervoud kiezen aan de hand van deze waarde\n"
+"  MSGID MSGID-MEERVOUD      MSGID (enkelvoud) en MSGID-MEERVOUD vertalen\n"
+"  AANTAL                    enkel- of meervoud kiezen gebaseerd op deze waarde\n"
 
 #: src/ngettext.c:233
 #, c-format, no-wrap
@@ -313,13 +317,3 @@ msgstr ""
 "wordt in de gewone map, kan een andere locatie worden opgegeven via de\n"
 "omgevingsvariabele TEXTDOMAINDIR.\n"
 "Standaard zoekmap: %s\n"
-
-#~ msgid ""
-#~ "Copyright (C) %s Free Software Foundation, Inc.\n"
-#~ "This is free software; see the source for copying conditions.  There is NO\n"
-#~ "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n"
-#~ msgstr ""
-#~ "Copyright (C) %s Free Software Foundation, Inc.\n"
-#~ "Dit is vrije software; zie de programmatekst voor de kopieervoorwaarden.\n"
-#~ "Er is GEEN garantie; zelfs niet voor VERKOOPBAARHEID of GESCHIKTHEID\n"
-#~ "VOOR EEN BEPAALD DOEL.\n"
