--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-26  Bruno Haible  <bruno@clisp.org>
+
+	* po/fi.po: New file, from Lauri Nurmi <lanurmi@iki.fi>.
+	* po/LINGUAS: Add fi.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESPOFILES): Add the new message catalogs.
+
 2007-10-20  Bruno Haible  <bruno@clisp.org>
 
 	New example for Qt/Jambi.
