--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-27  Bruno Haible  <bruno@clisp.org>
+
+	* tests/test-term-ostream-xterm-netbsd3.out: New file.
+	* tests/test-term-ostream-xterm: Use it as possible test result.
+	* modules/term-ostream-tests (Files): Add it.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2007-10-26  Bruno Haible  <bruno@clisp.org>
 
 	* modules/libxml (Depends-on): Add snprintf, vsnprintf. Needed for
