Use @LTLIBC@ instead of -lc.

--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-27  Bruno Haible  <bruno@clisp.org>
 
+	* modules/gettext-tools-misc (Makefile.am): Use @LTLIBC@ instead of
+	hardcoding -lc. Needed for HP-UX 11.
+
+2007-10-27  Bruno Haible  <bruno@clisp.org>
+
 	* tests/test-term-ostream-xterm-new.out: New file.
 	* tests/test-term-ostream-xterm: Use it as possible test result.
 	* modules/term-ostream-tests (Files): Add it.
