--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-27  Bruno Haible  <bruno@clisp.org>
+
+	* fr.po: Update from Christophe Combelles <ccomb@free.fr>.
+
 2007-10-26  Bruno Haible  <bruno@clisp.org>
 
 	* eo.po: Update from D. Dale Gulledge <dsplat@rochester.rr.com>.
