--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-27  Bruno Haible  <bruno@clisp.org>
+
+	* lang-gawk: Skip the test if the gawk version is 3.1.5.
+
 2007-10-20  Bruno Haible  <bruno@clisp.org>
 
 	* msgmerge-22: New file.
