--- a/gettext-tools/man/ChangeLog
+++ b/gettext-tools/man/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-27  Bruno Haible  <bruno@clisp.org>
+
+	* recode-sr-latin.x: New file.
+	* Makefile.am (man_aux): Add recode-sr-latin.x.
+	(man_MAN1OTHER): Add recode-sr-latin.1.
+	(man_HTMLOTHER): Add recode-sr-latin.1.html.
+	(recode-sr-latin.1, recode-sr-latin.1.html): New rules.
+
 2006-11-27  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.16.1 released.
